style.css
@import url(//fonts.googleapis.com/css?family=VT323);

body{
	background-color:#01000F;
	font-family: "VT323", sans;
	font-size: 62.5%; /* 1em = 10px*/
	color: #37CE1C;
n}
h1{
	font-size: 4em;
}
h2{
	font-size: 2.5em;
}
:visited,:link{color:#37CE1C;}

#header{
	text-align:center;
	margin:0 auto;
}
#header h1{
	font-size:8em;
	padding: 0.2em;
}
canvas {
	background: #37CE1C;
}
#container{
	margin:auto;
	display:block;
	width: 100%;
	height: 100%;
}
#game{
	position: absolute;
	width: 90%;
	left: 5%;
	height: 75%;
}
#game_over{
	display: none;	
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 50%;
    height: 30%;
    margin: auto;
}
#game_over_inner{
	width: 250px;
	margin: auto;
	text-align: center;
	background:#030C33;
	padding:25px;
}

